# AirSign

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audit.toml  deny.toml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
apps/signer-mobile/: app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/signer-mobile/app/: _layout.tsx  display.tsx  frost.tsx  history.tsx  index.tsx  keystore.tsx  scan.tsx  settings.tsx  squads.tsx
apps/signer-mobile/ios/: Podfile
apps/signer-mobile/ios/AirSignSigner/: Info.plist
apps/signer-mobile/ios/AirSignSigner.xcodeproj/: project.pbxproj
apps/signer-mobile/ios/AirSignSigner.xcodeproj/xcshareddata/xcschemes/: AirSignSigner.xcscheme
apps/signer-mobile/ios/AirSignSigner.xcworkspace/: contents.xcworkspacedata
apps/signer-mobile/modules/airsign-core/: AirSignCore.podspec  build.gradle  index.ts
apps/signer-mobile/modules/airsign-core/assets/: airsign_bridge.html
apps/signer-mobile/modules/airsign-core/assets/wasm/: afterimage_wasm.js  afterimage_wasm_bg.wasm  afterimage_wasm_bg.wasm.d.ts
apps/signer-mobile/modules/airsign-core/src/: AirSignCoreModule.kt  AirSignCoreModule.swift  AirSignCoreModule.ts  types.ts
apps/signer-mobile/src/components/: AirplaneModeGuard.tsx  QrAnimator.tsx  QrScanner.tsx  TransactionReview.tsx
apps/signer-mobile/src/native/: AirSignCore.ts
apps/signer-web/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
apps/signer-web/public/: pitch-deck.html
apps/signer-web/public/wasm/: afterimage_wasm.d.ts
apps/signer-web/src/: App.tsx  main.tsx  wasm.ts
apps/signer-web/src/components/: PasswordStrengthMeter.tsx
apps/signer-web/src/lib/: demo-wallet.ts  phantom.ts  solana-tx.ts  wallet-ctx.tsx  wasm-api.ts
apps/signer-web/src/pages/: DkgPage.tsx  FrostPage.tsx  HomePage.tsx  MultisigPage.tsx  ReceivePage.tsx  SendPage.tsx  SignPage.tsx  SquadsPage.tsx
apps/signer-web/src/styles/: index.css
crates/afterimage-cli/: Cargo.toml
crates/afterimage-cli/src/: main.rs
crates/afterimage-core/: Cargo.toml
crates/afterimage-core/src/: crypto.rs  error.rs  fountain.rs  lib.rs  password.rs  protocol.rs  session.rs
crates/afterimage-core/tests/: hostile_input_test.rs  latency_benchmark.rs  replay_attack_test.rs
crates/afterimage-dkg/: Cargo.toml
crates/afterimage-dkg/src/: coordinator.rs  error.rs  lib.rs  participant.rs  types.rs
crates/afterimage-frost/: Cargo.toml
crates/afterimage-frost/src/: aggregator.rs  dealer.rs  error.rs  lib.rs  participant.rs  types.rs
crates/afterimage-optical/: Cargo.toml
crates/afterimage-optical/src/: camera.rs  display.rs  error.rs  lib.rs  qr.rs
crates/afterimage-solana/: Cargo.toml
crates/afterimage-solana/src/: broadcaster.rs  error.rs  inspector.rs  keystore.rs  ledger.rs  ledger_apdu.rs  lib.rs  multisig_request.rs  multisig_response.rs  multisigner.rs  preflight.rs  request.rs  response.rs  signer.rs  wallet.rs
crates/afterimage-squads/: Cargo.toml
crates/afterimage-squads/src/: adapter.rs  config_tx.rs  error.rs  lib.rs  multisig.rs  types.rs  vault_tx.rs
crates/afterimage-wasm/: Cargo.toml
crates/afterimage-wasm/src/: lib.rs
crates/afterimage-wasm/tests/: e2e.rs
docs/: COMPARISON.md  SECURITY_MODEL.md
docs/AUDIT_PACKAGE/: CRYPTO_SPEC.md  KNOWN_ISSUES.md  QUESTIONNAIRE.md  SCOPE.md  TEST_COVERAGE.md  THREAT_MODEL.md
scripts/: vercel-build.sh
tests/: integration_test.rs
