[package]
name        = "afterimage-squads"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true
description = "Squads v4 on-chain multisig integration for AirSign — build, propose, approve, and execute Squads vault transactions from an air-gapped workflow"

[dependencies]
solana-sdk    = { workspace = true }
solana-client = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
base64        = { workspace = true }
bincode       = { workspace = true }
hex           = { workspace = true }
sha2          = { workspace = true }
borsh         = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
serde_json = { workspace = true }