[package]
name        = "afterimage-wasm"
description = "WebAssembly bindings for the AfterImage air-gap protocol"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords     = ["wasm", "air-gap", "qr-code", "browser"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
afterimage-core = { workspace = true }

wasm-bindgen = { workspace = true }
js-sys       = { workspace = true }
getrandom    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
base64       = { workspace = true }

[features]
default = []