[package]
name        = "afterimage-wasm"
description = "WebAssembly bindings for the AfterImage air-gap protocol"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords     = ["wasm", "air-gap", "qr-code", "browser"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
afterimage-core  = { workspace = true }
afterimage-frost = { workspace = true }
afterimage-dkg   = { workspace = true }

wasm-bindgen  = { workspace = true }
js-sys        = { workspace = true }
getrandom     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
base64        = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# Disable wasm-opt post-processing (Homebrew binaryen too old for bulk-memory)
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
